[block-divider] Overflow hidden dots/asterisk width to prevent horizontal scrollbars when right aligned. Closes #350

--- a/src/block/divider/style.scss
+++ b/src/block/divider/style.scss
@@ -24,6 +24,7 @@
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
+		overflow: hidden;
 	}
 	.ugb-divider__dot {
 		flex-shrink: 0;
